--- a/src/main/resources/templates/fragments/head-page.html
+++ b/src/main/resources/templates/fragments/head-page.html
@@ -22,7 +22,7 @@
 
   <!-- Custom styles for this template-->
   <link th:href="@{/css/sb-admin-2.min.css}" rel="stylesheet">
-
+  <script src="https://unpkg.com/@popperjs/core@2"></script>
 
 </head>
 
