--- a/src/main/resources/templates/fragments/nav-bar.html
+++ b/src/main/resources/templates/fragments/nav-bar.html
@@ -1,4 +1,5 @@
-<nav  th:fragment="fragment-nav" class="navbar navbar-expand navbar-light topbar mb-4 static-top shadow">
+<nav th:fragment="fragment-nav" class="navbar navbar-expand navbar-light topbar mb-4 static-top shadow"
+     xmlns:th="http://www.w3.org/1999/xhtml">
 
     <!-- Sidebar Toggle (Topbar) -->
     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
@@ -14,12 +15,16 @@
         <li class="nav-item dropdown no-arrow">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <div   class="mr-2 d-none d-lg-inline small " ></div>
+                <div   class="mr-2 d-none d-lg-inline small "  th:utext="${usuario2.getUserName()}" ></div>
                 <i class="fas fa-angle-down"></i>
             </a>
             <!-- Dropdown - User Information -->
             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                  aria-labelledby="userDropdown">
+                <a class="dropdown-item user-select-none" href="/editar/usuario">
+                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                    Editar usuário
+                </a>
                 <a class="dropdown-item user-select-none" href="/logout" data-toggle="modal" data-target="#logoutModal">
                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                     Logout
