--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -39,65 +39,89 @@
                 <div class="d-sm-flex align-items-center justify-content-between mb-4">
                     <h1 class="h3 mb-0 text-gray-800">Home</h1>
                 </div>
-
+                <div th:if="${#request.getParameter('msg')} !=null" class="alert alert-warning alert-dismissible fade show" role="alert">
+                    <strong th:text="${#request.getParameter('msg')}"></strong>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
                 <!-- Content Row -->
                 <div class="card">
-
-                <div class="card shadow mb-4">
-                    <div class="card-header py-3">
+                <div class="card shadow ">
+                    <div  class="card-header py-3">
                         <h6 class="m-0 font-weight-bold text-primary">Feed de postagens</h6>
-                        <hr/>
-                        <a data-toggle="modal" th:attr="data-target='#recordDeleteModal'+${usuario2.id}" class=" btn btn-outline-primary text-decoration-none" >
-                            Fazer Postagem
-                        </a>
-
-                        <!-- Modal -->
-                        <div class="modal fade" th:attr="id='recordDeleteModal'+ ${usuario2.id}" tabindex="-1" role="dialog" aria-labelledby="recordDeleteModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="recordDeleteModalLabel">Postagem</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <form class="user" th:action="@{/postar}" enctype="multipart/form-data"
-                                              method="post" autocomplete="off"  role="form">
-                                            <div class="form-group row">
-                                                <div class="col-sm-6 mb-3 mb-sm-0">
-                                                    <label  class="form-label required">Titulo</label>
-                                                    <input hidden th:field="${post.user}">
-                                                    <input th:field="${post.titulo}" type="text" class="form-control" id="exampleFirstName"
-                                                           placeholder="Titulo">
-                                                </div>
-                                                <div class="col-sm-6">
-                                                    <label  class="form-label required">Descricao</label>
-                                                    <input th:field="${post.descricao}" type="text" class="form-control" id="exampleLastName"
-                                                           placeholder="Descrição do post">
-                                                </div>
-                                                <div class="form-group">
-                                                    <label>Imagem:</label> <input type="file" name="file"/><br />
-                                                </div>
-
-                                            </div>
-                                            <button type="submit" class="btn btn-primary">Postar</button>
-                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">cancelar</button>
-                                        </form>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <span th:if="${#request.getParameter('msg')} !=null" class="alert alert-info par position-relative" role="alert" th:text="${#request.getParameter('msg')}"></span>
                     </div>
                     <div class="m-2 w-100">
                         <div class="w-100">
-                            <div th:each="pst : ${posts}">
-                                <p th:text="${pst.titulo}"></p>
-                                <p th:text="${pst.descricao}"></p>
-                                <img width="100px" th:src="@{'/images/' + ${pst.getImagemUri()}}" alt="imagem"/>
+                            <div class="card m-2">
+                                <form class="user m-3" th:action="@{/postar}" enctype="multipart/form-data"
+                                      method="post" autocomplete="off"  role="form">
+                                    <strong class="ml-2">Poste algo!</strong>
+                                    <br/>
+                                    <div class="form-group">
+                                        <div class="col-sm-6 mb-3 mb-sm-0">
+                                            <input hidden th:field="${post.user}">
+                                            <input th:field="${post.titulo}" type="text" class="form-control" id="exampleFirstName"
+                                                   placeholder="Titulo">
+                                        </div>
+                                        <br/>
+                                        <div class="col-sm-6">
+                                            <textarea rows="3" th:field="${post.descricao}" type="text" class="form-control" id="exampleLastName"
+                                                      placeholder="Descrição do post">
+                                            </textarea>
+                                        </div>
+                                        <div class="form-group m-3">
+                                            <input type="file" name="file"/><br />
+                                        </div>
+
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Postar</button>
+                                </form>
                             </div>
+
+                            <div th:each="pst : ${posts}" class="card m-3">
+                                <div class="card-header">
+                                    <strong th:text="${pst.user.userName}"></strong>
+                                    <a  th:href="@{'/editar/post/' + ${pst.id}}" class="align-content-end text-decoration-none ml-3">
+                                            <span class="icon text-primary">
+                                                <i class="fas fa-edit"></i>
+                                            </span>
+                                    </a>
+                                    <a data-toggle="modal" th:attr="data-target='#recordDeleteModal'+${pst.id}" th:href="@{'/deletar/post/' + ${pst.id}}" class="text-decoration-none" >
+                                            <span class="icon text-danger">
+                                                <i class="fas fa-trash"></i>
+                                            </span>
+                                    </a>
+
+                                    <!-- Modal -->
+                                    <div class="modal fade" th:attr="id='recordDeleteModal'+ ${pst.id}" tabindex="-1" role="dialog" aria-labelledby="recordDeleteModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog" role="document">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" id="recordDeleteModalLabel">Deletar Post</h5>
+                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                                    </button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    Tem certeza que deseja deletar o post?
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Não</button>
+                                                    <a href="newRecordForm.html" class="btn btn-primary" th:attr="href='/deletar/post/'+${pst.id}">Sim</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title" th:text="${pst.titulo}"></h5>
+                                    <p class="card-text" th:text="${pst.descricao}"></p>
+                                    <div th:if="${pst.imagemUri != null}">
+                                        <img class="img-fluid" alt="Responsive image" th:src="@{'/images/' + ${pst.getImagemUri()}}"/>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
