Adicionar link pra rota de cadastrar usuário

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -69,7 +69,7 @@
                                         <p style="font-size: 16px; color: #fd7c7b;">Senha ou Usuário incorreto, Por favor verifique e tente novamente.</p>
                                     </div>
                                     <div class="text-center">
-                                        <a class="small">Esqueceu a senha?</a>
+                                        <a class="small" href="/cadastro/usuario">Registrar-se</a>
                                     </div>
                                 </div>
                             </div>
