Ajusta botão de voltar

--- a/src/main/resources/templates/cadastro-usuario.html
+++ b/src/main/resources/templates/cadastro-usuario.html
@@ -77,7 +77,7 @@
                                             <button type="submit" class="btn btn-primary  mr-2">
                                                 Cadastrar
                                             </button>
-                                            <a class="btn btn-info  mr-2" href="/admin/listar/usuarios">
+                                            <a class="btn btn-info  mr-2" href="/">
                                                 Voltar
                                             </a>
 
