--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -80,18 +80,21 @@
                             </div>
 
                             <div th:each="pst : ${posts}" class="card m-3">
-                                <div class="card-header">
+                                <div class="card-header d-inline-block">
                                     <strong th:text="${pst.user.userName}"></strong>
-                                    <a  th:href="@{'/editar/post/' + ${pst.id}}" class="align-content-end text-decoration-none ml-3">
+                                    <div class="row d-inline-block" th:if="${pst.user.userName == usuario2.userName}">
+                                        <a  th:href="@{'/editar/post/' + ${pst.id}}" class="align-content-end text-decoration-none ml-3">
                                             <span class="icon text-primary">
                                                 <i class="fas fa-edit"></i>
                                             </span>
-                                    </a>
-                                    <a data-toggle="modal" th:attr="data-target='#recordDeleteModal'+${pst.id}" th:href="@{'/deletar/post/' + ${pst.id}}" class="text-decoration-none" >
+                                        </a>
+                                        <a data-toggle="modal" th:attr="data-target='#recordDeleteModal'+${pst.id}" th:href="@{'/deletar/post/' + ${pst.id}}" class="text-decoration-none" >
                                             <span class="icon text-danger">
                                                 <i class="fas fa-trash"></i>
                                             </span>
-                                    </a>
+                                        </a>
+                                    </div>
+
 
                                     <!-- Modal -->
                                     <div class="modal fade" th:attr="id='recordDeleteModal'+ ${pst.id}" tabindex="-1" role="dialog" aria-labelledby="recordDeleteModalLabel" aria-hidden="true">
