--- a/src/main/resources/templates/atualizar-postagem.html
+++ b/src/main/resources/templates/atualizar-postagem.html
@@ -62,6 +62,8 @@
                                             <input hidden th:field="${post.id}">
                                             <input hidden th:field="${post.user.id}">
                                             <input hidden th:field="${post.user}">
+                                            <input hidden th:field="${post.dataCadastro}">
+
                                             <input th:field="${post.titulo}" type="text" class="form-control" id="exampleFirstName"
                                                    placeholder="Titulo">
                                         </div>
@@ -75,7 +77,7 @@
                                             <div th:if="${post.imagemUri != null}">
                                                 <label>Imagem anterior:</label>
                                                 <img width="200px" class="img-fluid" alt="Responsive image" th:src="@{'/images/' + ${post.getImagemUri()}}"/>
-                                                <input required type="file" name="file"/><br />
+                                                <input type="file" name="file"/><br />
                                             </div>
                                         </div>
 
