--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -117,11 +117,17 @@
                                         </div>
                                     </div>
 
-                                </div>
+
                                 <div class="card-body">
                                     <h5 class="card-title" th:text="${pst.titulo}"></h5>
+                                    <span class="card-subtitle">Publicado às
+                                        <span th:text="${#calendars.format(pst.getDataCadastro(), 'HH:mm, dd/MM/yyyy')}">.</span>
+                                        <div th:if="${pst.getDataAtualizacao()!=null}">
+                                            Editado às <span th:text="${#calendars.format(pst.getDataAtualizacao(), 'HH:mm, dd/MM/yyyy')}"/>
+                                        </div>
+                                    </span>
                                     <p class="card-text" th:text="${pst.descricao}"></p>
-                                    <div th:if="${pst.imagemUri != null}">
+                                    <div th:if="${pst.getImagemUri().equals('')}">
                                         <img class="img-fluid" alt="Responsive image" th:src="@{'/images/' + ${pst.getImagemUri()}}"/>
                                     </div>
                                 </div>
