--- a/src/main/resources/templates/atualizar-usuario.html
+++ b/src/main/resources/templates/atualizar-usuario.html
@@ -91,7 +91,31 @@
                                             <a class="btn btn-info  mr-2" href="/home">
                                                 Voltar
                                             </a>
-
+                                            <a data-toggle="modal" th:attr="data-target='#recordDeleteModal'+${usuario2.id}" th:href="@{'/deletar/usuario/' + ${usuario2.id}}" class="btn btn-danger text-white text-decoration-none" >
+                                            <span class="icon text-white">
+                                                <i class="fas fa-trash"></i>
+                                                Desativar Conta
+                                            </span>
+                                            </a>
+                                            <div class="modal fade" th:attr="id='recordDeleteModal'+ ${usuario2.id}" tabindex="-1" role="dialog" aria-labelledby="recordDeleteModalLabel" aria-hidden="true">
+                                                <div class="modal-dialog" role="document">
+                                                    <div class="modal-content">
+                                                        <div class="modal-header">
+                                                            <h5 class="modal-title" id="recordDeleteModalLabel">Desativar Usuário</h5>
+                                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                                <span aria-hidden="true">&times;</span>
+                                                            </button>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                            Tem certeza que deseja desativar sua conta??
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Não</button>
+                                                            <a href="newRecordForm.html" class="btn btn-danger" th:attr="href='/deletar/usuario/'+${usuario2.id}">Sim</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                         <hr>
                                     </form>
