Ajusta curtir e descurtir de uma postagem

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -130,6 +130,13 @@
                                     <div th:if="${pst.imagemUri != null}">
                                         <img class="img-fluid" alt="Responsive image" th:src="@{'/images/' + ${pst.getImagemUri()}}"/>
                                     </div>
+                                    <a  th:href="@{'/curtir/post/' + ${pst.id}}" class="btn btn-primary align-content-end text-decoration-none mt-1">
+                                            <span class="icon text-white">
+                                                <i class="fas fa-heart"></i>
+                                                Curtir
+                                                <i class="rounded-circle" th:text="${pst.curtidas}"></i>
+                                            </span>
+                                    </a>
                                 </div>
                             </div>
                         </div>
