--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -130,15 +130,16 @@
                                     <div th:if="${pst.postagem.imagemUri != null}">
                                         <img class="img-fluid" alt="Responsive image" th:src="@{'/images/' + ${pst.postagem.getImagemUri()}}"/>
                                     </div>
-                                    <button th:id="|post-${pst.id}|" th:onclick="|curtirPost(${pst.id})|"
+                                    <p th:text="${pst.curtido}"></p>
+                                    <button th:id="|post-${pst.postagem.id}|" th:onclick="|curtirPost(${pst.postagem.id})|"
                                               class="btn btn-primary align-content-end text-decoration-none mt-1">
                                             <span class="icon text-white">
                                                 <i class="fas fa-heart icone-curtida"></i>
                                                 Curtir
-                                                <i class="rounded-circle quantidade-curtidas" th:text="${pst.curtidas}"></i>
+                                                <i class="rounded-circle quantidade-curtidas" th:text="${pst.postagem.curtidas}"></i>
                                             </span>
                                     </button>
-                                    <a  th:href="@{'/comentarios/post/' + ${pst.id}}" class="btn btn-primary align-content-end text-decoration-none mt-1">
+                                    <a  th:href="@{'/comentarios/post/' + ${pst.postagem.id}}" class="btn btn-primary align-content-end text-decoration-none mt-1">
                                             <span class="icon text-white">
                                                 <i class="fas fa-comment"></i>
                                                 Comentarios
@@ -178,18 +179,12 @@
 
 <script src="/js/post.js"></script>
 
-<<<<<<< HEAD
-<th:block th:replace="fragments/head-page :: body-final">
-</th:block>
 
-=======
 <th:block th:replace="fragments/head-page :: body-final"></th:block>
 
 
 </div>
-
 </div>
->>>>>>> 9f9f5bc (Adiciona Dto de postagem)
 </body>
 
 </html>
