feature: excluir comentário de uma postagem

--- a/src/main/resources/templates/comentarios-postagem.html
+++ b/src/main/resources/templates/comentarios-postagem.html
@@ -22,6 +22,7 @@
     <!-- Content Wrapper -->
     <div id="content-wrapper" class="d-flex flex-column">
 
+
         <!-- Main Content -->
         <div id="content">
 
@@ -38,6 +39,7 @@
                 <!-- Page Heading -->
                 <div class="d-sm-flex align-items-center justify-content-between mb-4">
                     <h1 class="h3 mb-0 text-gray-800">Comentários</h1>
+
                 </div>
                 <div th:if="${#request.getParameter('msg')} !=null" class="alert alert-warning alert-dismissible fade show" role="alert">
                     <strong th:text="${#request.getParameter('msg')}"></strong>
@@ -48,10 +50,30 @@
                 <!-- Content Row -->
                 <div class="card">
                 <div class="card shadow ">
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                        Launch demo modal
+                    </button>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-body">
+                                   Tem certeza que deseja excluir o comentário?
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-success" data-dismiss="modal">Não, cancelar.</button>
+                                    <a  type="button" class="btn btn-danger href-item">Sim, excluir.</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="m-2 w-100">
                         <div class="card m-3">
                                 <div class="card-body">
+
                                     <h5 class="card-title" th:text="${post.titulo}"></h5>
                                     <span class="card-subtitle">Publicado às
                                         <span th:text="${#calendars.format(post.getDataCadastro(), 'HH:mm, dd/MM/yyyy')}">.</span>
@@ -86,8 +108,20 @@
                             <div th:each="coment : ${comentarios}"  class="list-group-item list-group-item-action flex-column align-items-start">
                                 <div class="d-flex w-100 justify-content-between">
                                     <small class="text-muted" th:text="${coment.user.userName}"></small>
+                                    <div class="dropdown">
+                                        <button class="btn dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
+                                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                                        </button>
+                                        <div class="dropdown-menu">
+                                            <button class="dropdown-item" type="button"> <i class="fas fa-edit"></i> Editar</button>
+                                            <button  th:onclick="openModalExcluir([[${coment.id}]])" class="dropdown-item" type="button"> <i class="fas fa-comment-slash"></i> Excluir</button>
+                                        </div>
+                                    </div>
                                 </div>
-                                <p class="mb-1" th:text="${coment.descricao}"></p>
+                                <p class="mb-1" th:text="${coment.descricao}"></p><div class="dropdown">
+
+                            </div>
+
                             </div>
                         </div>
 
@@ -119,6 +153,7 @@
             </div>
         </div>
 </div>
+<script src="/js/post.js"></script>
 
 <th:block th:replace="fragments/head-page :: body-final"></th:block>
 
