--- a/src/main/resources/templates/fragments/head-page.html
+++ b/src/main/resources/templates/fragments/head-page.html
@@ -22,6 +22,8 @@
 
   <!-- Custom styles for this template-->
   <link th:href="@{/css/sb-admin-2.min.css}" rel="stylesheet">
+  <link th:href="@{/css/sb-admin-2.css}" rel="stylesheet">
+
   <script src="https://unpkg.com/@popperjs/core@2"></script>
 
 </head>
