--- a/src/main/resources/templates/fragments/side-bar.html
+++ b/src/main/resources/templates/fragments/side-bar.html
@@ -1,6 +1,5 @@
-
 <!-- Sidebar -->
-<ul  th:fragment="fragment-bar"  class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+<ul th:fragment="fragment-bar" class="navbar-nav  sidebar sidebar-dark accordion" id="accordionSidebar">
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
 
@@ -8,7 +7,6 @@
     </a>
 
     <!-- Divider -->
-    <hr class="sidebar-divider my-0">
 
     <!-- Nav Item - Dashboard -->
     <li class="nav-item active">
@@ -18,32 +16,29 @@
     </li>
 
     <!-- Divider -->
-    <hr class="sidebar-divider">
 
     <!-- Heading -->
-    <div class="sidebar-heading">
-        Paginas
-    </div>
+
 
     <!-- Nav Item - Pages Collapse Menu -->
     <li class="nav-item">
 
-        <a class="nav-link " href="#" >
+        <a class="nav-link " href="#">
             <i class="fas fa-fw fa-user"></i>
             <span>Meu perfil</span>
         </a>
 
-        <a  class="nav-link " href="#" >
+        <a class="nav-link " href="#">
             <i class="fas fa-fw fa-search"></i>
             <span>Explorar</span>
         </a>
 
-        <a   class="nav-link " href="#" >
+        <a class="nav-link " href="#">
             <i class="fas fa-fw fa-users"></i>
             <span>Minhas conexões</span>
         </a>
 
-        <a   class="nav-link " href="#" >
+        <a class="nav-link " href="#">
             <i class="fas fa-fw fa-arrow-alt-circle-up"></i>
             <span>Em alta</span>
         </a>
@@ -56,4 +51,3 @@
 
 </ul>
 <!-- End of Sidebar -->
-
