--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,7 +23,7 @@
     <div id="content-wrapper" class="d-flex flex-column">
 
         <!-- Main Content -->
-        <div id="content">
+        <div id="content" >
 
             <!-- Topbar -->
             <nav th:replace="fragments/nav-bar :: fragment-nav">
@@ -46,41 +46,37 @@
                     </button>
                 </div>
                 <!-- Content Row -->
-                <div class="card">
-                <div class="card shadow ">
-                    <div  class="card-header py-3">
-                        <h6 class="m-0 font-weight-bold text-primary">Feed de postagens</h6>
-                    </div>
-                    <div class="m-2 w-100">
-                        <div class="w-100">
-                            <div class="card m-2">
-                                <form class="user m-3" th:action="@{/postar}" enctype="multipart/form-data"
-                                      method="post" autocomplete="off"  role="form">
-                                    <strong class="ml-2">Poste algo!</strong>
-                                    <br/>
-                                    <div class="form-group">
-                                        <div class="col-sm-6 mb-3 mb-sm-0">
-                                            <input hidden th:field="${post.user}">
-                                            <input th:field="${post.titulo}" type="text" class="form-control" id="exampleFirstName"
-                                                   placeholder="Titulo">
-                                        </div>
-                                        <br/>
-                                        <div class="col-sm-6">
+                <div class="card m-2">
+                    <form class="user m-3" th:action="@{/postar}" enctype="multipart/form-data"
+                          method="post" autocomplete="off"  role="form">
+                        <strong class="ml-2">Poste algo!</strong>
+                        <br/>
+                        <div class="form-group">
+                            <div class="col-sm-6 mb-3 mb-sm-0">
+                                <input hidden th:field="${post.user}">
+                                <input th:field="${post.titulo}" type="text" class="form-control" id="exampleFirstName"
+                                       placeholder="Titulo">
+                            </div>
+                            <br/>
+                            <div class="col-sm-6">
                                             <textarea rows="3" th:field="${post.descricao}" type="text" class="form-control" id="exampleLastName"
                                                       placeholder="Descrição do post">
                                             </textarea>
-                                        </div>
-                                        <div class="form-group m-3">
-                                            <input type="file" name="file"/><br />
-                                        </div>
-
-                                    </div>
-                                    <button type="submit" class="btn btn-primary">Postar</button>
-                                </form>
+                            </div>
+                            <div class="form-group m-3">
+                                <input type="file" name="file"/><br />
                             </div>
 
+                        </div>
+                        <button type="submit" class="btn btn-primary">Postar</button>
+                    </form>
+                </div>
+                <div class="">
+                <div class=" ">
+                    <div class="m-2 w-100">
+                        <div class="w-100">
                             <div th:each="pst : ${posts}" class="card m-3">
-                                <div class="card-header d-inline-block">
+                                <div class="card-header bg-white d-inline-block">
                                     <a th:href="@{'/visualizar/usuario/' + ${pst.postagem.user.id}}"><strong th:text="${pst.postagem.user.userName}"></strong></a>
                                     <div class="row d-inline-block" th:if="${pst.postagem.user.userName == usuario2.userName}">
                                         <a  th:href="@{'/editar/post/' + ${pst.postagem.id}}" class="align-content-end text-decoration-none ml-3">
